--- a/python-sdk/tutorials/training/distributed-training-with-large-image-data/distributed-training-with-large-image-data.ipynb
+++ b/python-sdk/tutorials/training/distributed-training-with-large-image-data/distributed-training-with-large-image-data.ipynb
@@ -86,8 +86,7 @@
     "import pandas as pd\n",
     "from azureml.core import Dataset, Experiment, Workspace\n",
     "from helper import create_compute_cluster, download_and_unzip_file, \\\n",
-    "    get_az_storage_cli_auth_param, register_jsonl_dataset_from_coco_metadata, \\\n",
-    "    wait_for_runs_to_complete\n",
+    "    get_az_storage_cli_auth_param, register_jsonl_dataset_from_coco_metadata\n",
     "from launch_run import launch_run"
    ]
   },
